--- a/templets/default/html/content.html
+++ b/templets/default/html/content.html
@@ -22,7 +22,7 @@
 		
 		<div class="myui-rumbs col-pd clearfix">
     		<span class="text-muted">当前位置：</span>
-    		<a href="/">首页</a> <i class="fa fa-angle-right text-muted"></i>
+    		<a href="{seacms:indexlink}">首页</a> <i class="fa fa-angle-right text-muted"></i>
     		<a href="{playpage:typelink}">{playpage:typename}</a> <i class="fa fa-angle-right text-muted"></i>
     		<span class="text-muted">{playpage:name}</span>
     	</div>
