--- a/templets/default/html/foot.html
+++ b/templets/default/html/foot.html
@@ -29,7 +29,7 @@
 			</div>
 		</div>
 	</li>
-	<li><a href="/gbook.php" title="留言反馈"><i class="fa fa-commenting"></i></a></li></ul>
+	<li><a href="{seacms:indexlink}/gbook.php" title="留言反馈"><i class="fa fa-commenting"></i></a></li></ul>
 
 <script type="text/javascript">
 	MyTheme.Images.Qrcode.Init();MyTheme.Link.Short();MyTheme.Other.Skin();MyTheme.Other.Share();</script>
