--- a/templets/default/html/login.html
+++ b/templets/default/html/login.html
@@ -16,7 +16,7 @@
 		<div class="myui-panel-box clearfix">		
 			<div class="myui-panel_bd">
 				<div class="head text-center">
-					<a href="/"><img class="img-responsive" src="images/logo.png"/></a>
+					<a href="{seacms:indexlink}"><img class="img-responsive" src="images/logo.png"/></a>
 										<h5>登录账号</h5>
 				</div>
 			{login:viewLogin}
